--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     </nav>
 
     <div class="first-container">
-        <img src="./images/dog1.jpg" alt="első kutya">
+        <img src="./dog1.jpg" alt="első kutya">
     </div>
     <div class="second-container">
-        <img src="./images/dog2.jpg" alt="két kutya">
+        <img src="./dog2.jpg" alt="két kutya">
     </div>
     <div class="third-container">
-        <img src="./images/dog4.jpg" alt="bögrés kutya">
+        <img src="./dog4.jpg" alt="bögrés kutya">
     </div>
 
 
